Project

General

Profile

Actions

Bug #20977

closed

bluestore segv on kraken-x

Added by Sage Weil over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

    -5> 2017-08-10 20:36:08.498559 7fd4d8052d00 10 bluefs _read_random h 0x7fd4e26b2380 0x7aa6a5~1322 from file(ino 37 size 0x9b8e0e mtime 2017-08-10 20:36:08.296513 bdev 1 extents [1:0xe00000+100000,1:0x1300000+300000,1:0x1a00000+300000,1:0x2100000+300000])
    -4> 2017-08-10 20:36:08.498563 7fd4d8052d00 20 bluefs _read_random read buffered 0xaa6a5~1322 of 1:0x2100000+300000
    -3> 2017-08-10 20:36:08.498564 7fd4d8052d00  5 bdev(0x7fd4e21f3800 /var/lib/ceph/osd/ceph-2/block) read_random 0x21aa6a5~1322
    -2> 2017-08-10 20:36:08.498672 7fd4d8052d00 20 bluefs _read_random got 4898
    -1> 2017-08-10 20:36:08.498683 7fd4d8052d00 20 bluestore(/var/lib/ceph/osd/ceph-2).collection(3.4s0_head 0x7fd4e279d100)  r 0 v.len 1220
     0> 2017-08-10 20:36:08.501435 7fd4d8052d00 -1 *** Caught signal (Segmentation fault) **
 in thread 7fd4d8052d00 thread_name:ceph-osd

 ceph version 12.1.2-603-g674e30d (674e30d8b38b1843cfc37f66830a6e6226249b17) luminous (rc)
 1: (()+0xa21281) [0x7fd4d8a94281]
 2: (()+0xf370) [0x7fd4d56b1370]
 3: (operator<<(std::ostream&, BlueStore::SharedBlob const&)+0x28) [0x7fd4d893aae8]
 4: (operator<<(std::ostream&, BlueStore::Blob const&)+0xc0) [0x7fd4d893ac80]
 5: (BlueStore::Blob::get_ref(BlueStore::Collection*, unsigned int, unsigned int)+0x19a) [0x7fd4d893ae4a]
 6: (BlueStore::Blob::decode(BlueStore::Collection*, ceph::buffer::ptr::iterator&, unsigned long, unsigned long*, bool)+0x5fd) [0x7fd4d896121d]
 7: (BlueStore::ExtentMap::decode_spanning_blobs(ceph::buffer::ptr::iterator&)+0x23f) [0x7fd4d896839f]
 8: (BlueStore::Collection::get_onode(ghobject_t const&, bool)+0xf91) [0x7fd4d8999591]
 9: (BlueStore::fsck(bool)+0x1ba5) [0x7fd4d89b1555]
 10: (BlueStore::_mount(bool)+0x276) [0x7fd4d89af436]
 11: (OSD::init()+0x3ba) [0x7fd4d8579c0a]
 12: (main()+0x2def) [0x7fd4d848137f]
 13: (__libc_start_main()+0xf5) [0x7fd4d46c7b35]

/a/gregf-2017-08-10_19:55:49-upgrade:kraken-x:parallel-wip-20891-pool-metadata-distro-basic-smithi/1508025

Related issues 1 (0 open1 closed)

Related to Ceph - Bug #20984: Segmentation fault in upgrade:kraken-x-luminousDuplicate08/11/2017

Actions
Actions #1

Updated by Sage Weil over 6 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Sage Weil over 6 years ago

  • Backport set to luminous
Actions #3

Updated by Greg Farnum over 6 years ago

  • Related to Bug #20984: Segmentation fault in upgrade:kraken-x-luminous added
Actions #4

Updated by Sage Weil over 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF